; ModuleID = '/home/carl/AnghaBench/freebsd/gnu/usr.bin/gdb/kgdb/extr_kld.c_kld_relocate_section_addresses.c'
source_filename = "/home/carl/AnghaBench/freebsd/gnu/usr.bin/gdb/kgdb/extr_kld.c_kld_relocate_section_addresses.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.so_list = type { %struct.TYPE_2__*, %struct.section_table* }
%struct.TYPE_2__ = type { i32 }
%struct.section_table = type { i32 }

@kld_relocate_section_addresses.curr_addr = internal global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.so_list*, %struct.section_table*)* @kld_relocate_section_addresses to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @kld_relocate_section_addresses(%struct.so_list* %0, %struct.section_table* %1) #0 {
  %3 = alloca %struct.so_list*, align 8
  %4 = alloca %struct.section_table*, align 8
  store %struct.so_list* %0, %struct.so_list** %3, align 8
  store %struct.section_table* %1, %struct.section_table** %4, align 8
  %5 = load %struct.section_table*, %struct.section_table** %4, align 8
  %6 = load %struct.so_list*, %struct.so_list** %3, align 8
  %7 = getelementptr inbounds %struct.so_list, %struct.so_list* %6, i32 0, i32 1
  %8 = load %struct.section_table*, %struct.section_table** %7, align 8
  %9 = icmp eq %struct.section_table* %5, %8
  br i1 %9, label %10, label %16

10:                                               ; preds = %2
  %11 = load %struct.so_list*, %struct.so_list** %3, align 8
  %12 = getelementptr inbounds %struct.so_list, %struct.so_list* %11, i32 0, i32 0
  %13 = load %struct.TYPE_2__*, %struct.TYPE_2__** %12, align 8
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  store i32 %15, i32* @kld_relocate_section_addresses.curr_addr, align 4
  br label %16

16:                                               ; preds = %10, %2
  %17 = load %struct.section_table*, %struct.section_table** %4, align 8
  %18 = call i32 @adjust_section_address(%struct.section_table* %17, i32* @kld_relocate_section_addresses.curr_addr)
  ret void
}

declare dso_local i32 @adjust_section_address(%struct.section_table*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
